11643 - Introduce TestIndexRepository